# LSys

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Renderable.cpp  Renderable.h  ShaderSubsystem.cpp  ShaderSubsystem.h  imgui.ini  quad-koch-curve-B  quad-koch-curve-E  quad-koch-curve-F  quad-snowflake-curve
docs/: structure.md
include/: Camera.h  ColoredTriangle.h  LSystemAlphabet.h  Line.h  ShaderObject.h  ShaderProgram.h  Stack.h  Transform.h  Turtle.h  lindenmayer.h  logging.hpp  logging.inl  main.h
include/UI/: UIManager.h
include/glad/: glad.h
include/lindenmayer/: LSystemAlphabet.h  lindenmayer.h
include/rendering/: Camera.h  ColoredTriangle.h  Line.h  RenderableBase.cpp  RenderableBase.h  RenderingContext.h  ShaderManager.h  ShaderObject.h  ShaderProgram.h
include/utility/: DynamicSet.hpp  Stack.h  Transform.h  Turtle.h  logging.hpp  logging.inl  util.h
resource/: passthrough.vs
resource/shader/: HCLight_passthrough.fs  HCLight_passthrough.vs  passthrough.fs  passthrough.vs
resource/systems/example/: bracketed-OL-3D  bracketed-OL-A  bracketed-OL-B  bracketed-OL-C  bracketed-OL-D  bracketed-OL-E  bracketed-OL-F  hilbert-curve-3D  islands-and-lakes  koch-quadratic  koch-snowflake  quad-koch-curve-A  quad-koch-curve-B  quad-koch-curve-C  quad-koch-curve-D  quad-koch-curve-E  quad-koch-curve-F  quad-koch-island  quad-snowflake-curve
src/: Camera.cpp  ShaderObject.cpp  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Turtle.cpp  glad.c  lindenmayer.cpp  logging.cpp  main.cpp
src/UI/: UIManager.cpp
src/lindenmayer/: LSystemAlphabet.cpp  lindenmayer.cpp
src/rendering/: Camera.cpp  RenderableBase.cpp  RenderingContext.cpp  ShaderManager.cpp  ShaderObject.cpp  ShaderProgram.cpp
src/utility/: Transform.cpp  Turtle.cpp  logging.cpp  util.cpp
systems/: bracketed-OL-3D  bracketed-OL-A  bracketed-OL-B  bracketed-OL-D  bracketed-OL-E  bracketed-OL-F  hilbert-curve-3D  islands-and-lakes  quad-koch-curve-A  quad-koch-curve-D
